# RP2040-Zero-gamecube-controller

./: .cproject  .project  CMakeLists.txt  README.md
.github/workflows/: cmake-firmware.yml
include/: global.hpp  logging.hpp
include/communication_protocols/: joybus.hpp
include/communication_protocols/joybus/: gcReport.hpp
include/dac_algorithms/: melee_F1.hpp
include/gpio_to_button_sets/: F1.hpp
include/other/: runtime_remapping_mode.hpp
include/persistence/: functions.hpp  page_indexes.hpp
include/persistence/pages/: runtime_remapping.hpp
src/: logging.cpp  main.cpp
src/communication_protocols/: joybus.cpp
src/dac_algorithms/: melee_F1.cpp
src/gpio_to_button_sets/: F1.cpp
src/other/: runtime_remapping_mode.cpp
